--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <nav>
         <div class="nav-holder">
             <div class="logo"> 
-                <div class="logotravel">travel-fly</div>
+                <div class="logotravel"></div>
             </div>
             <div class="a-box">
                 <a href="index.html">home   </a>
-                <a href="">|</a>
+                <a href=""><span>|</span></a>
                 <a href="about.html">about  </a>
-                <a href="">|</a>
+                <a href=""><span>|</span></a>
                 <a href="#">tours </a>
-                <a href="">|</a>
+                <a href=""><span>|</span></a>
                 <a href="#">special offerblog</a>
-                <a href="">|</a>
+                <a href=""><span>|</span></a>
                 <a href="#">blog</a>
-                <a href="">|</a>
+                <a href=""><span>|</span></a>
                 <a href="#">contacts</a>
             </div>
         </div>
@@ -157,7 +157,7 @@
     <div class="footer-box">
         <div class="footer-holder">
             <div class="logo">
-                <div class="logotravel">travel-fly</div>
+                <div class="logotravel"></div>
             </div>
             <div class="copywrite">Copyright 2019 travel-fly. All rights reserved</div>
             <div class="media">
